# creditcardbilling

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  temp_periodic_expenses.csv
src/: streamlit_app.py
src/db_connection/: db.py
src/installments/: installments.py
src/periodic_expenses/: periodic_expenses.py
tests/unit/: test_periodic_expenses.py
