[metadata]
name = creditcardbill
description = Credit Card Bill Monitoring
author = Emanuel Moncao Lima
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    installments
    periodic_expenses

install_requires = csv
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no